Fixed overlay on firefox browser

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -8,6 +8,7 @@
 .landing .container {
     height: 100%;
     text-align: center;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
