--- a/src/style/index.css
+++ b/src/style/index.css
@@ -129,7 +129,6 @@ input {
     left: 0;
     background-color: var(--alt-color);
     opacity: 0.65;
-    z-index: -1;
 }
 
 .container {
